fixing responsive issues

--- a/index.css
+++ b/index.css
@@ -118,8 +118,17 @@ header {
   flex-shrink: 0; /* Center the logo vertically */
   margin-right: 20px; /* Push the logo to the left */
   margin-left: -15rem; /* Push the logo to the left */
+  cursor: pointer;
   transition: color 0.3s, transform 0.3s; /* Smooth transition for hover effect */
 
+}
+.logo a{
+  text-decoration: none; /* Remove underline */
+  color: white; 
+}
+.logo a:hover{
+  text-decoration: none; /* Remove underline */
+  color: white; 
 }
 .logo:hover {
   color: #f0f8ff; /* Change color on hover */
